--- a/sondeo/templates/base.html
+++ b/sondeo/templates/base.html
@@ -1,12 +1,17 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>{% block titulo %}Documento{% endblock %}</title>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+
 </head>
 <body>
-    Holaaaa
+
+    {% block body %}{% endblock %}
+
 </body>
 </html>
