--- a/sondeo/templates/base.html
+++ b/sondeo/templates/base.html
@@ -35,7 +35,7 @@
                 <a class="nav-link" href="#">Features</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'sondeo:registrarUsuario'%}">registrar</a>
+                <a class="nav-link" href="{% url 'sondeo:urlUsuario'%}">registrar</a>
               </li>
               
             </ul>
