--- a/sondeo/templates/login/login.html
+++ b/sondeo/templates/login/login.html
@@ -22,7 +22,7 @@
     </form>
     <div class="container" style="text-align: center;">
       <a class="btn btn-success"  href="{% url 'sondeo:urlAdmin' %}">Soy admin</a>
-      <a class="btn btn-success"  href="#">No tengo usuario</a>
+      <a class="btn btn-success"  href="{% url 'sondeo:urlUsuario' %}">No tengo usuario</a>
     </div>
 
 {% endblock %}
