--- a/sondeo/templates/base.html
+++ b/sondeo/templates/base.html
@@ -29,7 +29,15 @@
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="{% url 'sondeo:inicio' %}">Sondeos</a>
               </li>
-              {% block opcNavAdmin %}{% endblock %}
+              {% if request.session.autenticado.0 == "A" %}
+                {# agregamos una opcion adicional a la barra de navegacion si es que la variable de session contiene el string A que significa Administrador  #}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'sondeo:urlSondeo' %}">Crear Sondeo</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Esta en administrador</a>
+                </li>
+              {% endif %}
 
               <li class="nav-item">
                 <a class="nav-link" href="#">Features</a>
@@ -40,7 +48,27 @@
               
             </ul>
           </div>
-          {% block opcNavAdmin2 %}{% endblock %}
+          {% if autenticacion %}
+          {# agregamos la opcion Cerrar Sesion en caso de que este logueado  #}
+            <div lass="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'sondeo:cerrarSesion' %}">Cerrar Sesion</a>
+                </li>
+                </ul>
+            </div>
+          {% else %}
+            <div lass="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+              <li class="nav-item">
+                  <a class="nav-link" href="{% url 'sondeo:login' %}">iniciar Sesion</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'sondeo:urlUsuario' %}">registrarse</a>
+            </li>
+              </ul>
+            </div>
+          {% endif %}
           
         </div>
 
