--- a/sondeo/templates/formularios/formSondeos.html
+++ b/sondeo/templates/formularios/formSondeos.html
@@ -27,7 +27,91 @@
 {# --------------------------------desde aqui codigo del body ------------------------------------------------------------ #}
 {% block body %}
     <h2>Bienvenido a sondeo.net {% if autenticacion %}{{ autenticacion.2 }}{% endif %}, ahora vamos a crear un nuevo sondeo</h2>
+    <div class="container">
 
+        <form action="{% url 'sondeo:guardarSondeo'%}" method="post" class="bg-dark ">
+            {% csrf_token %}
+            <div class="row">
+                <div class="col s12">
+                    <div class="row">
+                        <div class="row">
+                    </div>
+    
+                    <div class="row">
+                        <div class="input-field col s6">
+                            <input id="admins" type="text" name="admins_completos" class="validate" required>
+                            <label for="admins">Administradores</label>
+                        </div>
+                    </div>
+    
+                    <div class="row">
+                        <div class="input-field col s6">
+                            <input id="asunto" type="text" name="asunto" class="validate" required>
+                            <label for="asunto">Asunto</label>
+                        </div>
+                    </div>
+    
+                    <div class="row">
+                        <div class="input-field col s6">
+                            <textarea name="descripcion" id="descripcion" cols="50" rows="10" class="validate"></textarea>
+                            <label for="descripcion">Descripcion</label>
+                        </div>
+                    </div>
+    
+                    <div class="row">
+                        <div class="input-field col s6">
+                            <input id="imagen" name="imagen_" type="text" class="validate">
+                            <label for="imagen">imagen</label>
+                        </div>
+    
+                    </div>
+    
+                    <div class="row">
+                        <div class="input-field col s6">
+                            <input id="edadMinima" type="number" name="edadMinima" class="validate">
+                            <label for="edadMinima">edadMinima</label>
+                        </div>
+                    </div>
+    
+                    <div class="row">
+                        <div class="input-field col s6">
+                            <input id="tematica" name="tematica" type="number" class="validate">
+                            <label for="tematica">Tematica</label>
+                        </div>
+                    </div>
+    
+                    <div class="row">
+                        <div class="input-field col s6">
+                            <input id="fechaPublicacion" type="datetime" name="fechaPublicacion_" class="validate">
+                            <label for="fechaPublicacion">fecha de publicacion del sondeo</label>
+                        </div>
+                    </div>
+    
+                    <div class="row">
+                        <div class="input-field col s6">
+                            <input id="fechaFinPublicacion" type="datetime" name="fechaFinPublicacion" class="validate">
+                            <label for="fechaFinPublicacion">fecha Final de la Publicacion</label>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="input-field col s6">
+                            <input id="obligatorio" type="date" name="obligatorio" class="validate">
+                            <label for="obligatorio">obligatorio</label>
+                        </div>
+                    </div>
+    
+                    </div>
+                    <div class="col-12">
+                        <button class="btn btn-primary" type="submit">Submit form</button>
+                    </div>
+                </div>
+        </form>
+    
+    
+    </div>
+    
+       
     
     
 {% endblock %}
