--- a/sondeo/templates/formularios/formSondeos.html
+++ b/sondeo/templates/formularios/formSondeos.html
@@ -1,29 +1,6 @@
 {% extends 'base.html' %} {% load static %}
 {% block titulo %}Sondeos{% endblock %}
 
-{% block opcNavAdmin %}
-    {# agregamos una opcion adicional a la barra de navegacion si es que la variable de session contiene el string A que significa Administrador  #}
-    {% if autenticacion.3 == "A" %}
-    <li class="nav-item">
-        <a class="nav-link" href="#">Crear Sondeo</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" href="#">Esta en administrador</a>
-    </li>
-    {% endif %}
-{% endblock %}
-{% block opcNavAdmin2 %}
-    {# agregamos la opcion Cerrar Sesion en caso de que este logueado  #}
-    {% if autenticacion %}
-        <div lass="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'sondeo:cerrarSesion' %}">Cerrar Sesion</a>
-            </li>
-            </ul>
-        </div>
-    {% endif %}
-{% endblock %}
 {# --------------------------------desde aqui codigo del body ------------------------------------------------------------ #}
 {% block body %}
     <h2>Bienvenido a sondeo.net {% if autenticacion %}{{ autenticacion.2 }}{% endif %}, ahora vamos a crear un nuevo sondeo</h2>
@@ -33,21 +10,12 @@
             {% csrf_token %}
             <div class="row">
                 <div class="col s12">
-                    <div class="row">
-                        <div class="row">
-                    </div>
-    
-                    <div class="row">
-                        <div class="input-field col s6">
-                            <input id="admins" type="text" name="admins_completos" class="validate" required>
-                            <label for="admins">Administradores</label>
-                        </div>
-                    </div>
+                    <input type="text" name="administrador" hidden value="1">
     
                     <div class="row">
                         <div class="input-field col s6">
                             <input id="asunto" type="text" name="asunto" class="validate" required>
-                            <label for="asunto">Asunto</label>
+                            <label for="asunto">Asunto De la Pregunta</label>
                         </div>
                     </div>
     
@@ -57,11 +25,21 @@
                             <label for="descripcion">Descripcion</label>
                         </div>
                     </div>
-    
+                    
                     <div class="row">
+                        <div class="input-field col s6"> 
+                            <label for="estado">¿Desea que este habilitado?</label></br></br>
+                            <select class="form-select" id="estado" name="estado">
+                                <option value="s">Si</option>
+                                <option value="n">No</option>
+                            </select>
+                        </div>
+                    </div>
+
+                    <div class="row">   
                         <div class="input-field col s6">
                             <input id="imagen" name="imagen_" type="text" class="validate">
-                            <label for="imagen">imagen</label>
+                            <label for="imagen">Escriba la url de la imagen</label>
                         </div>
     
                     </div>
@@ -82,22 +60,24 @@
     
                     <div class="row">
                         <div class="input-field col s6">
-                            <input id="fechaPublicacion" type="datetime" name="fechaPublicacion_" class="validate">
+                            <input id="fechaPublicacion" type="date" name="fechaPublicacion_" class="validate">
                             <label for="fechaPublicacion">fecha de publicacion del sondeo</label>
                         </div>
                     </div>
     
                     <div class="row">
                         <div class="input-field col s6">
-                            <input id="fechaFinPublicacion" type="datetime" name="fechaFinPublicacion" class="validate">
+                            <input id="fechaFinPublicacion" type="date" name="fechaFinPublicacion" class="validate">
                             <label for="fechaFinPublicacion">fecha Final de la Publicacion</label>
                         </div>
                     </div>
-
                     <div class="row">
                         <div class="input-field col s6">
-                            <input id="obligatorio" type="date" name="obligatorio" class="validate">
-                            <label for="obligatorio">obligatorio</label>
+                            <label for="obligatorio">obligatorio</label></br></br>
+                            <select class="form-select" id="obligatorio" name="obligatorio">
+                                <option value="s">Si</option>
+                                <option value="n">No</option>
+                            </select>
                         </div>
                     </div>
     
