--- a/sondeo/templates/base.html
+++ b/sondeo/templates/base.html
@@ -20,14 +20,14 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="#">Sena</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="{% url 'sondeo:inicio' %}">Sondeos</a>
+                <a class="nav-link active" aria-current="page" href="{% url 'sondeo:inicio' %}"> Ver Sondeos</a>
               </li>
               {% if request.session.autenticado.0 == "A" %}
                 {# agregamos una opcion adicional a la barra de navegacion si es que la variable de session contiene el string A que significa Administrador  #}
@@ -38,13 +38,6 @@
                     <a class="nav-link" href="#">Esta en administrador</a>
                 </li>
               {% endif %}
-
-              <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'sondeo:urlUsuario'%}">registrar</a>
-              </li>
               
             </ul>
           </div>
