--- a/sondeo/templates/index/sondeos.html
+++ b/sondeo/templates/index/sondeos.html
@@ -3,7 +3,7 @@
 
 {# --------------------------------desde aqui codigo del body ------------------------------------------------------------ #}
 {% block body %}
-    <h2>Bienvenido a sondeo.net {% if autenticacion %}{{ autenticacion.2 }}{% endif %}</h2>
+    <h2>Bienvenido a sondeo.net {% if request.session.autenticado %}{{ request.session.autenticado.2 }}{% endif %}</h2>
 
     {% if sondeos %}
         {% for sondeito in sondeos %}
@@ -29,7 +29,26 @@
                 
                 
             {% endif %}
-            
+
+            {% if request.session.autenticado.0 == "U" %}
+                <form action="{% url 'sondeo:guardarRespuesta' %}">
+                    <div>
+                        <input type="number" name="usuario" value="{% if request.session.autenticado %}{{ request.session.autenticado.2 }}{% endif %}" hidden>
+                        <div class="row">
+                            <div class="input-field col s6">
+                                <label for="respuesta">Respuesta De la Pregunta</label>
+                                <textarea name="respuesta" id="respuesta" cols="50" rows="10" class="validate"></textarea>
+
+                            </div>
+                        </div>
+                        <input type="number" name="idSondeo" value="{{ sondeito.idSondeos }}" hidden>
+                    
+                        <button type="submit">Responder</button>
+
+                    </div>
+                </form>
+            {% endif %}
+
         {% endfor %}
 
     {% endif %}
