--- a/sondeo/templates/base.html
+++ b/sondeo/templates/base.html
@@ -3,77 +3,86 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block titulo %}Documento{% endblock %}</title>
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>{% block titulo %}Documento{% endblock %}</title>
+  <!-- CSS only -->
+  <!-- Compiled and minified CSS -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.datatables.net/1.12.1/css/dataTables.bootstrap5.min.css">
+
+  <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg bg-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">Sena</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="{% url 'sondeo:inicio' %}"> Ver Sondeos</a>
-              </li>
-              {% if request.session.autenticado.0 == "A" %}
-                {# agregamos una opcion adicional a la barra de navegacion si es que la variable de session contiene el string A que significa Administrador  #}
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'sondeo:urlSondeo' %}">Crear Sondeo</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Esta en administrador</a>
-                </li>
-              {% endif %}
-              
-            </ul>
-          </div>
-          {% if request.session.autenticado %}
-          {# agregamos la opcion Cerrar Sesion en caso de que este logueado  #}
-            <div lass="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'sondeo:cerrarSesion' %}">Cerrar Sesion</a>
-                </li>
-                </ul>
-            </div>
-          {% else %}
-            <div lass="collapse navbar-collapse" id="navbarNav">
-              <ul class="navbar-nav">
-              <li class="nav-item">
-                  <a class="nav-link" href="{% url 'sondeo:login' %}">iniciar Sesion</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{% url 'sondeo:urlUsuario' %}">registrarse</a>
-            </li>
-              </ul>
-            </div>
+  <nav class="navbar navbar-expand-lg bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">Sena</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="{% url 'sondeo:inicio' %}"> Ver Sondeos</a>
+          </li>
+          {% if request.session.autenticado.0 == "A" %}
+          {# agregamos una opcion adicional a la barra de navegacion si es que la variable de session contiene el string
+          A que significa Administrador #}
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'sondeo:urlSondeo' %}">Crear Sondeo</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Esta en administrador</a>
+          </li>
           {% endif %}
-          
-        </div>
 
-      </nav>
+        </ul>
+      </div>
+      {% if request.session.autenticado %}
+      {# agregamos la opcion Cerrar Sesion en caso de que este logueado #}
+      <div lass="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'sondeo:cerrarSesion' %}">Cerrar Sesion</a>
+          </li>
+        </ul>
+      </div>
+      {% else %}
+      <div lass="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'sondeo:login' %}">iniciar Sesion</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'sondeo:urlUsuario' %}">registrarse</a>
+          </li>
+        </ul>
+      </div>
+      {% endif %}
 
-    {% block body %}{% endblock %}
-    <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    </div>
 
+  </nav>
+
+  {% block body %}{% endblock %}
+
+  <!-- JavaScript Bundle with Popper -->
+  
+
+
+  
+  
+  
+  <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+  <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
+  <script src="https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap5.min.js"></script>
+  <script src="{% static 'js/funciones.js' %}"></script>
 </body>
 
 </html>
