--- a/sondeo/templates/base.html
+++ b/sondeo/templates/base.html
@@ -21,7 +21,7 @@
 <body>
   <nav class="navbar navbar-expand-lg bg-light">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Sena</a>
+      <h4 class="navbar-brand"  style="color: black">Sena</h4>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
