--- a/sondeo/templates/base.html
+++ b/sondeo/templates/base.html
@@ -37,8 +37,10 @@
           <li class="nav-item">
             <a class="nav-link" href="{% url 'sondeo:urlSondeo' %}">Crear Sondeo</a>
           </li>
+          {% endif %}
+          {% if request.session.autenticado.0 == "U" %}
           <li class="nav-item">
-            <a class="nav-link" href="#">Esta en administrador</a>
+            <a class="nav-link" href="{% url 'sondeo:listarCerti' %}">Listar Certificados</a>
           </li>
           {% endif %}
 
